BootStrap library added

--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular": "^1.6.4",
     "angular-bootstrap": "^2.5.0",
     "angular-ui-router": "^0.4.2",
-    "ngstorage": "^0.3.11"
+    "ngstorage": "^0.3.11",
+    "bootstrap": "^3.3.7"
   }
 }
