--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/angularSample
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+
+liquibase:
+    contexts: dev
