Gulp script added

--- a/package.json
+++ b/package.json
@@ -23,6 +23,21 @@
   "homepage": "https://github.com/msg2santoshsagar/AngularRestSample#readme",
   "devDependencies": {
     "bower": "^1.8.0",
-    "browser-sync": "^2.18.8"
+    "browser-sync": "^2.18.8",
+    "event-stream": "^3.3.4",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-inject": "^4.2.0",
+    "gulp-natural-sort": "^0.1.1",
+    "gulp-notify": "^3.0.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-print": "^2.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-rev": "^7.1.2",
+    "gulp-uglify": "^2.1.2",
+    "main-bower-files": "^2.13.1",
+    "run-sequence": "^1.2.2",
+    "yargs": "^7.1.0"
   }
 }
