--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /target/
 /.settings/
 /node_modules/
+/src/main/webapp/app/app.cc.js
 /src/main/webapp/app/**/*min.js
+/src/main/webapp/bower_components
