--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,13 @@
 							</execution>
 						</executions>
 					</plugin>
+					<!-- <plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-war-plugin</artifactId>
+						<configuration>
+							<packagingExcludes>app/*/**/*.js</packagingExcludes>
+						</configuration>
+					</plugin> -->
 				</plugins>
 			</build>
 		</profile>
