--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
 						<artifactId>frontend-maven-plugin</artifactId>
 						<version>${frontend-maven-plugin.version}</version>
 						<executions>
-							<!-- <execution>
+							<execution>
 								<id>install node and npm</id>
 								<goals>
 									<goal>install-node-and-npm</goal>
@@ -78,7 +78,7 @@
 									<nodeVersion>${node.version}</nodeVersion>
 									<npmVersion>${npm.version}</npmVersion>
 								</configuration>
-							</execution> -->
+							</execution>
 							<execution>
 								<id>gulp Dev Build</id>
 								<goals>
