--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-uglify": "^2.1.2",
     "main-bower-files": "^2.13.1",
     "run-sequence": "^1.2.2",
-    "yargs": "^7.1.0"
+    "yargs": "^7.1.0",
+    "gulp-angular-filesort":"^1.1.1"
   }
 }
